hasura/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hasura
  namespace: hasura
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - k8s-stack.hasura.app
    secretName: k8s-stack-hasura-app-tls
  rules:
  - host: k8s-stack.hasura.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hasura
            port: 
              number: 80
